{
    "name": "SpelerBesturing",
    "maps": [
        {
            "name": "SpelerBeweging",
            "id": "d97f451e-b11f-4671-9177-6ad6642cf81f",
            "actions": [
                {
                    "name": "Speler1 Beweging",
                    "type": "PassThrough",
                    "id": "ac89215c-ae81-4072-af55-cddcde511abf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Speler2 Beweging",
                    "type": "PassThrough",
                    "id": "8fd14186-4201-4f03-9b46-e63a46e1e67d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "aabe84bb-71e7-4dd1-ac8a-f0c39a4896ce",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speler2 Beweging",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0edf0ced-473a-4614-95c6-0a1026657f2c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0d328f52-011d-408e-80b4-83f1c14fcbec",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2b5e093f-4397-4d0e-99a3-2b409ce36072",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c28cc614-dc7b-4f2f-ad9a-c81552f36428",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler2 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "a212b8ec-4c0d-44ea-9def-68c5f923f4b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speler1 Beweging",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "aa5d0d55-d8a9-41e6-845a-4a73dcca1ab5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b5c85739-9a1c-40f2-9eef-6da41aeeeb9e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f075c2d-dfa8-4b46-90dd-30260840aa3c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "386b315e-6417-45da-9dbd-173d35416b0e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Toetsenbord",
                    "action": "Speler1 Beweging",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Toetsenbord",
            "bindingGroup": "Toetsenbord",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}